# General-AgentBench

./: .gitignore  LICENSE  README.md
general_agent/: .env-example  README.md  environment.yml  pyproject.toml  requirements.txt  run.py  setup.sh
general_agent/data/: mathhay_benchmark.json  mcpbench_benchmark.json  search_benchmark.json  swebench_test_50.json  tau2bench_benchmark.json  terminalbench_benchmark.json
general_agent/scripts/: README.md  calculate_parallel_scale_scores.py  calculate_self_choice_scores.py  calculate_sequential_scores.py  models.py  run_baseline.sh  run_pairwise_self_choice.sh  run_parallel_scaling.sh  run_pointwise_self_choice.sh  run_sequential_scaling.sh
general_agent/source/: __init__.py  agent.py  config.py  host.py  main.py  mcpbench_tasks.py  native_evaluators.py
general_agent/source/bump_sort/: __init__.py  evaluator.py  main.py  prompts.py  runner.py
general_agent/source/evaluators/: __init__.py  swebench_evaluator.py  terminalbench_evaluator.py
general_agent/source/executors/: __init__.py
general_agent/source/llm_api/: __init__.py  base.py  litellm_api.py  openai_api.py
general_agent/source/scaling/: __init__.py  checkpoint.py  config.py  controller.py
general_agent/source/self_choice/: __init__.py  evaluator.py  main.py  per_datapoint.py  prompts.py  runner.py
general_agent/source/servers/: __init__.py  mathhay_server.py  mcpbench_server.py  search_server.py  swebench_server.py  swebench_server_old.py  tau2_server.py  terminalbench_server.py  terminalbench_server_old.py
(+35749 files in other folders)
