[project]
name = "mcp-benchmark"
version = "0.1.0"
description = "All-in-One Multi-Task Benchmark Framework based on MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
allinone = "source.main:main"
allinone-eval = "source.evals.tau2_native_evaluator:run_native_eval_cli"